fix service get and showedit check
