# docs/openapi/api-internal-v1.yaml
@@ -66,7 +66,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Estimate'
+              $ref: '#/components/schemas/EstimateCreateBody'
 
       responses:
         '200':
@@ -342,14 +342,17 @@ components:
           format: int32
           maximum: 999999999
           minimum: 1
-        billing:
-          $ref: '#/components/schemas/Billing'
       required:
         - totalDigitalNotif
         - totalPaper890Notif
         - totalPaperNationalNotif
         - totalPaperInternationalNotif
-        - billing
+
+    EstimateCreateBody:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/Estimate'
+        - $ref: '#/components/schemas/Billing'
 
 
     EstimateSearchTableDTO:
